fixed some layout issues and login workflow

--- a/src/styles/containers/_main-container.scss
+++ b/src/styles/containers/_main-container.scss
@@ -2,5 +2,5 @@
   background: $brand-blue-1;
   flex:1;
   display: grid;
-  grid-template-columns: 230px auto 100px;
+  grid-template-columns: 230px auto;
 }
